--- a/vcard/joshuamckenna/index.html
+++ b/vcard/joshuamckenna/index.html
@@ -9,6 +9,16 @@
   <meta name="url" content="https://enbizcard.vishnuraghav.com/" />
   <meta name="designer" content="Vishnu Raghav" />
   <meta property="og:title" content="Joshua McKenna's Digital Business Card" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="Delivering value by design." />
+  <meta property="og:url" content="https://mcfam.cc/vcard/joshuamckenna" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:image" content="https://mcfam.cc/vcard/photo.jpeg" />
+  <meta property="og:image:secure_url" content="https://mcfam.cc/vcard/photo.jpeg" />
+  <meta property="og:image:width" content="1240" />
+  <meta property="og:image:height" content="620" />
+  <meta property="og:image:alt" content="Joshua McKenna, Project Manager" />
+  <meta property="og:image:type" content="image/jpeg" />
   <meta property="twitter:title" content="Joshua McKenna's Digital Business Card" />
   <script>
     "http" == window.location.href.substr(0, 4) &&
