--- a/vcard/joshuamckenna/index.html
+++ b/vcard/joshuamckenna/index.html
@@ -13,11 +13,11 @@
   <meta property="og:description" content="Delivering value by design." />
   <meta property="og:url" content="https://mcfam.cc/vcard/joshuamckenna" />
   <meta property="og:locale" content="en_US" />
-  <meta property="og:image" content="https://mcfam.cc/vcard/photo.jpeg" />
-  <meta property="og:image:secure_url" content="https://mcfam.cc/vcard/photo.jpeg" />
+  <meta property="og:image" content="https://mcfam.cc/vcard/joshuamckenna/photo.jpeg" />
+  <meta property="og:image:secure_url" content="https://mcfam.cc/vcard/joshuamckenna/photo.jpeg" />
   <meta property="og:image:width" content="1240" />
   <meta property="og:image:height" content="620" />
-  <meta property="og:image:alt" content="Joshua McKenna, Project Manager" />
+  <meta property="og:image:alt" content="Joshua McKenna, Project Manager at MediaMerge" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="twitter:title" content="Joshua McKenna's Digital Business Card" />
   <script>
